# yt-data-to-markdown

./: .gitignore  README.md  helper.py  logging_config.yaml  main.py  pyproject.toml  requirements.txt  script.py  yt_config.yaml  yt_videos.md
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  update_mogoDB.yaml
src/: get_data.py  main.py  test_activity.py  update_ytconfig.py  yt_config.yaml
