[project]
name = "yt-data-to-markdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "gitdb==4.0.11",
    "gitpython==3.1.41",
    "google-api-core==2.19.1",
    "google-api-python-client==2.137.0",
    "google-auth==2.32.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.63.2",
    "httplib2==0.22.0",
    "idna==3.7",
    "mdutils==1.6.0",
    "proto-plus==1.24.0",
    "protobuf==5.27.2",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pyparsing==3.1.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "requests==2.32.3",
    "rsa==4.9",
    "setuptools==69.0.3",
    "smmap==5.0.1",
    "typing-extensions==4.12.2",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "wheel==0.43.0",
    "yt-viewer",
]

[tool.uv.sources]
yt-viewer = { git = "https://github.com/VisualDudek/yt-viewer.git", rev = "b7c8a3b56d6ac40fae50200261bdac59b1b69ccd" }
